[package]
name = "stark-101-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
itertools = "0.10.5"
sha256 = "1.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
primitive-types = "0.12.1"
